[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/PlayerProjectile/PlayerProjectileCore.gd" type="Script" id=1]
[ext_resource path="res://Lib/FJ_LibHelper/BulletBehavior2D/BulletBehavior2D.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="PlayerProjectileCore" type="Area2D" groups=[
"PlayerProjectile",
]]
collision_layer = 4
collision_mask = 91
script = ExtResource( 1 )

[node name="BulletBehavior" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -16, -16, 32, 32 )

[node name="ReflectedDestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="ReflectedDestroyTimer" to="." method="queue_free_start"]
